crates/tui/src/ui/snapshots/dap_tui__ui__snapshot_tests__breakpoints_in_running_mode.snap
---
source: crates/tui/src/ui/mod.rs
expression: output
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ Shift+F5  Stop  Ctrl+P  Files  ?  Help  q  Quit                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Call Stack ──────────┐┌ Code ────────────────────────────────────────────────┐"
"│  (no session)        ││                    (no file open)                    │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"└──────────────────────┘│                                                      │"
"┌ Breakpoints [a:add d:┐│                                                      │"
"│  ● main.py:10        ││                                                      │"
"│  ● utils.py:25       ││                                                      │"
"│                      ││                                                      │"
"└──────────────────────┘│                                                      │"
"┌ Threads ─────────────┐│                                                      │"
"└──────────────────────┘└──────────────────────────────────────────────────────┘"
"┌ Variables [Alt+1] [y:yank] ──────────────────────────────────────────────────┐"
"│  (no session)                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" RUNNING                                                                        "
