crates/tui/src/ui/snapshots/dap_tui__ui__snapshot_tests__help_overlay.snap
---
source: crates/tui/src/ui/mod.rs
expression: output
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ F9  Start  Ctrl+P  Files  ?  Help  q  Quit                                   │"
"└───────────┌ Help (? to close) ───────────────────────────────────┐───────────┘"
"┌ Files ────│── Global ──                                          │───────────┐"
"│>          │  q / Ctrl+C      Quit                                │           │"
"│───────────│  ?               Toggle this help                    │           │"
"│No files fo│  Ctrl+P          Open file picker                    │           │"
"│           │  Ctrl+F, /       Search in file                      │           │"
"│           │  Tab / S-Tab     Cycle focus fwd/back                │           │"
"│           │  Alt+1/2/3       Switch bottom tab                   │           │"
"│           │  Esc             Close popup / cancel                │           │"
"│           │  z               Toggle zen mode (maximize code)     │           │"
"│           │                                                      │           │"
"│           │── Config ──                                          │           │"
"└───────────│  h / Left        Previous config                     │───────────┘"
"┌ Variables │  l / Right       Next config                         │───────────┐"
"│  (no sessi│                                                      │           │"
"│           │── Debugger ──                                        │           │"
"│           │  F9              Start / Continue / Restart          │           │"
"│           │  shift+F9        Terminate / Shutdown                │           │"
"│           │  ctrl+shift+F9   Restart session                     │           │"
"│           └──────────────────────────────────────────────────────┘           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" NO SESSION                                                                     "
