crates/tui/src/ui/snapshots/dap_tui__ui__snapshot_tests__no_session_with_configs.snap
---
source: crates/tui/src/ui/mod.rs
expression: output
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ ◀  Debug Python  ▶     F9  Start  Ctrl+P  Files  ?  Help  q  Quit            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Files ───────────────┐┌ Code ────────────────────────────────────────────────┐"
"│>                     ││                    (no file open)                    │"
"│──────────────────────││                                                      │"
"│No files found        ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"└──────────────────────┘└──────────────────────────────────────────────────────┘"
"┌ Variables [Alt+1] [y:yank] ──────────────────────────────────────────────────┐"
"│  (no session)                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" NO SESSION  [Debug Python]                                                     "
