crates/tui/src/ui/snapshots/dap_tui__ui__snapshot_tests__repl_tab.snap
---
source: crates/tui/src/ui/mod.rs
expression: output
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ shift+F9  Stop  Ctrl+P  Files  ?  Help  q  Quit                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Call Stack ──────────┐┌ Code ────────────────────────────────────────────────┐"
"│  (no session)        ││                    (no file open)                    │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"└──────────────────────┘│                                                      │"
"┌ Breakpoints [a:add d:┐│                                                      │"
"│  (none)              ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"└──────────────────────┘│                                                      │"
"┌ Threads ─────────────┐│                                                      │"
"└──────────────────────┘└──────────────────────────────────────────────────────┘"
"┌ REPL [Alt+3] ────────────────────────────────────────────────────────────────┐"
"│>> x + 1                                                                      │"
"│=> 42                                                                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│   (pause to evaluate)                                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" RUNNING                                                                        "
