crates/tui/src/ui/snapshots/dap_tui__ui__snapshot_tests__terminated_mode.snap
---
source: crates/tui/src/ui/mod.rs
expression: output
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ ◀  Test  ▶     F5  Restart  Ctrl+Shift+F5  Restart  Shift+F5  Close  q  Quit │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Call Stack ──────────┐┌ Code ────────────────────────────────────────────────┐"
"│  (no session)        ││                    (no file open)                    │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"└──────────────────────┘│                                                      │"
"┌ Breakpoints [a:add d:┐│                                                      │"
"│  (none)              ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"└──────────────────────┘│                                                      │"
"┌ Threads ─────────────┐│                                                      │"
"└──────────────────────┘└──────────────────────────────────────────────────────┘"
"┌ Variables [Alt+1] [y:yank] ──────────────────────────────────────────────────┐"
"│  (no session)                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" TERMINATED  [Test] Debugee terminated                                          "
