crates/tui/src/ui/snapshots/dap_tui__ui__snapshot_tests__zen_mode_with_file.snap
---
source: crates/tui/src/ui/mod.rs
expression: output
---
"┌ test.py ─────────────────────────────────────────────────────────────────────┐"
"│ 1 def hello():                                                               │"
"│ 2     print('hi')                                                            │"
"│ 3                                                                            │"
"│ 4 hello()                                                                    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" NO SESSION  [Zen: z] test.py:1                                                 "
